<resources>
    <string name="app_name">MovieManiac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rating">Rating : </string>
    <string name="Genres">Genres : </string>
    <string name="Period">Period : </string>
    <string name="Release_date">Release Date : </string>
    <string name="Movies">Movies</string>
    <string name="TV_shows">TV Shows</string>
    <string name="Popular_tv_shows">Popular TV Shows</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Click_to_login">Click to login</string>
    <string name="Click_to_register">Click to register</string>
    <string name="LogOut">Logout</string>
    <string name="Settings">Settings</string>
</resources>